testsuite/poke.pkl/strings-esc-diag-3.pk
/* { dg-do compile } */

/* Invalid \-sequence */

var s = "a\8b"; /* { dg-error "" } */
